# sadx-classic-randomizer

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  make_release.bat  sadx-classic-randomizer.sln  sadx-classic-randomizer.vcxproj
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
assets/: PlayerExample.yaml  mod.ini  sadx.apworld  sonic_data.ini
assets/SADX_Archipelago/: CopyAPCppDLL.bat  configschema.xml  mod.ini  songs.json
assets/SADX_Archipelago/object/: o_emblm.nja.sa1mdl
assets/SADX_Archipelago/replacetex/AVA_EMBLEM/: index.txt
assets/SADX_Archipelago/replacetex/EMBLEM/: index.txt
assets/SADX_Archipelago/replacetex/OBJ_REGULAR/: index.txt
assets/SADX_Archipelago/textures/: entrances.pvmx
assets/SADX_Archipelago/textures/pvr_common/: index.txt
assets/textures/: index.txt
lib/APCpp/: APCpp.exp  APCpp.lib  Archipelago.cpp  Archipelago.h  Archipelago_DataStorageSim.cpp  Archipelago_Gifting.cpp  mbedcrypto.lib  mbedtls.lib  mbedx509.lib
lib/sadx-mod-loader-linux-compatible/: SADXFunctionsNew.h
lib/sadx-mod-loader-linux-compatible/ModLoaderCommon/: IniFile.cpp  targetver.h
scripts/: debug_install.bat  debug_zip.bat  release-clean.bat  release_install.bat  release_zip.bat  release_zip.sh
src/: mod.cpp  mod2.cpp  pch.h
src/application/: Randomizer.cpp  Randomizer.h
src/application/link/: Link.cpp  Link.h
src/application/randomizer/: Randomizer.cpp  Randomizer.h
src/application/structs/: BossesStatus.h  ChaoStatus.h  CheckData.h  ItemData.h  LevelEntrances.cpp  LevelEntrances.h  LevelStatus.h  LocationData.h  Message.h  MissionStatus.h  Options.h  UnlockStatus.h  VisitedLevels.h  WeightedRandomSelector.h
src/configuration/: Options.cpp  Options.h
src/configuration/gameStatus/: GameStatus.cpp  GameStatus.h
src/configuration/gameStatus/sanity/: CapsuleSanity.h  EnemySanity.h  FishSanity.h
src/configuration/gameStatus/status/: BossesStatus.h  ChaoStatus.h  LevelStatus.h  MapStatus.h  MissionStatus.h  UnlockStatus.h  VisitedLevels.h
src/configuration/options/: Options.cpp  Options.h
src/configuration/settings/: Settings.cpp  Settings.h
src/input/archipelago/: ArchipelagoManager.cpp  ArchipelagoManager.h  FakeArchipelagoManager.cpp  FakeArchipelagoManager.h
src/input/autowin/: AutoWinManager.cpp  AutoWinManager.h
src/input/characterLoading/: CharacterLoadingDetector.cpp  CharacterLoadingDetector.h
src/input/cheatsManager/: CheatsManager.cpp  CheatsManager.h
src/input/eventDetector/: EventDetector.cpp  EventDetector.h
src/input/game/upgrade/: UpgradeDetector.cpp  UpgradeDetector.h
src/input/upgrade/: UpgradeDetector.cpp  UpgradeDetector.h
src/output/archipelagoMessenger/: ArchipelagoMessenger.cpp  ArchipelagoMessenger.h
src/output/characterManager/: CharacterManager.cpp  CharacterManager.h
src/output/characterSelectionManager/: CharacterSelectionManager.cpp  CharacterSelectionManager.h
src/output/checkRepository/: CheckRepository.cpp  CheckRepository.h
src/output/displayManager/: DisplayManager.cpp  DisplayManager.h
src/output/game/displayManager/: DisplayManager.cpp
src/output/itemRepository/: ItemRepository.cpp  ItemRepository.h
src/output/locationRepository/: LocationRepository.cpp  LocationRepository.h
src/output/menuManager/: MenuManager.cpp  MenuManager.h
src/output/musicManager/: MusicManager.cpp  MusicManager.h
src/output/reactionManager/: ReactionManager.cpp  ReactionManager.h
src/output/saveFileManager/: SaveFileManager.cpp  SaveFileManager.h
src/output/upgradeManager/: UpgradeManager.cpp  UpgradeManager.h
src/output/worldStateManager/: LevelEntrances.h  WorldStateManager.cpp  WorldStateManager.h
src/output/worldStateManager/DoorIndicatorManager/: DoorIndicatorManager.cpp  DoorIndicatorManager.h
src/output/worldStateManager/adventureFieldEntranceManager/: AdventureFieldEntranceManager.cpp  AdventureFieldEntranceManager.h  AdventureFieldEntranceMap.cpp  AdventureFieldEntranceMap.h  AdventureFieldRandomizer.md
src/output/worldStateManager/adventureFieldEntranceManager/DoorLogic/: AnotherDoorLogicStrategy.h  DefaultDoorLogicStrategy.h  EmblemGatingDoorLogicStrategy.h  EverythingClosedDoorLogicStrategy.h  EverythingOpenedDoorLogicStrategy.h  IDoorLogicStrategy.h  KeyItemDoorLogicStrategy.h
src/output/worldStateManager/adventureFieldEntranceManager/mapManager/: MapManager.cpp  MapManager.h
src/output/worldStateManager/doorIndicatorManager/: DoorIndicatorManager.cpp  DoorIndicatorManager.h
src/output/worldStateManager/levelEntranceManager/: LevelEntranceManager.cpp  LevelEntranceManager.h  LevelEntrances.cpp  LevelEntrances.h
src/output/worldStateManager/setObjectManager/: SetObjectManager.cpp  SetObjectManager.h
